# medusa_base

./: .gitmodules
medusa_bringup/launch/dev_launch/: nav.launch  sim.launch
medusa_nav/nav_tools/: CMakeLists.txt
medusa_nav/nav_tools/include/: FluidPressureToDepth.h  Gnss2Utm.h
medusa_nav/nav_tools/src/: FluidPressureToDepth.cpp  Gnss2Utm.cpp
medusa_sim/dynamics_sim/: CMakeLists.txt  package.xml  setup.py
medusa_sim/dynamics_sim/config/: dynamics_medusa.yaml  medusa.yaml  medusa_vectored.yaml
medusa_sim/dynamics_sim/config/topics/: dynamics_topics.yaml
medusa_sim/dynamics_sim/launch/: dynamics.launch  medusa_dynamics.launch
medusa_sim/dynamics_sim/src/: dynamics.py
