<?xml version="1.0"?>
<package>
  <name>dynamics_sim</name>
  <version>1.0.0</version>
  <description>
	The dynamics package
	  
	Institute for Systems and Robotics
	Instituto Superior Tecnico
	Lisbon, Portugal
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jorgeeribeiro@gmail.com">Jorge Ribeiro</maintainer>
  <maintainer email="miguel.silva.ribeiro@tecnico.ulisboa.pt">Miguel Ribeiro</maintainer>
  <maintainer email="henrique.ribeiro@tecnico.ulisboa.pt">Henrique Silva</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://dsor.isr.ist.utl.pt/</url>
  <url type="repository">https://bitbucket.org/dsor_isr/medusa-ros.git</url>
  
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>medusa_msgs</build_depend>
  <run_depend>medusa_msgs</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
